RESOLVED FIXED170685
WebAssembly: Fix B3IRGenerator for BrTable
https://bugs.webkit.org/show_bug.cgi?id=170685
Summary WebAssembly: Fix B3IRGenerator for BrTable
Keith Miller
Reported 2017-04-10 11:08:42 PDT
WebAssembly: Fix B3IRGenerator for BrTable
Attachments
Patch (4.25 KB, patch)
2017-04-10 11:10 PDT, Keith Miller
jfbastien: review+
Keith Miller
Comment 1 2017-04-10 11:10:20 PDT
JF Bastien
Comment 2 2017-04-10 11:14:36 PDT
Comment on attachment 306718 [details] Patch r=me
Keith Miller
Comment 3 2017-04-10 11:31:43 PDT
Note You need to log in before you can comment on or make changes to this bug.