WebAssembly: Fix B3IRGenerator for BrTable https://bugs.webkit.org/show_bug.cgi?id=170685

Reviewed by JF Bastien.

For some reason this didn't get included in r215141.

This fixes an issue with BrTable and loops where we would use the loop's return type
as the branch target type.

* wasm/WasmB3IRGenerator.cpp:
(JSC::Wasm::B3IRGenerator::ControlData::resultForBranch):
(JSC::Wasm::B3IRGenerator::unifyValuesWithBlock):

Canonical link: https://commits.webkit.org/187619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215193 268f45cc-cd09-0410-ab3c-d52691b4dbfc